
<resources>
    <string name="app_name">REN INVESTORS</string>
    <string name="welcome"> WELCOME!</string>
    <string name="welcome_back">WELCOME BACK %1$s!</string>
    <string name="txt_ty">Thank you!</string>
    <string name="introduction">We are happy to see you.\nAre you ready to discover our latest news?</string>
    <string name="skip">Skip</string>
    <string name="description_card_one">"Tell us about your preferences so we can adjust the contentsto your needs."</string>
    <string name="description_card_two">"Este cartão deve aparecer em segundo lugar na listagem."</string>
    <string name="description_card_three">"Este cartão deve aparecer em terceiro lugar na listagem."</string>
    <string name="title_card_one">Adjust content made for you</string>
    <string name="title_card_two">This is the second card</string>
    <string name="title_card_three">This is the third card</string>
    <string name="service_error">Service Error</string>
    <string name="ren_logo">ren logo</string>
    <string name="btn_chatbot1_next">btn_chatbot1_next</string>
    <string name="ctb_question01">First things first. What is your name?</string>
    <string name="submit">Submit</string>
    <string name="txt_greetings_beginning">Pleased to meet you,\n</string>
    <string name="txt_greetings_final">".In order to adjust contents to your preferences we will ask you a few questions.</string>

    <string name="txt_rating">How would you rate your knowledge on financial investments?</string>
    <string name="btn_proficient">Proficient</string>
    <string name="btn_intermediate">Intermediate</string>
    <string name="btn_elementary">Elementary</string>
    <string name="btn_considerably">Considerably</string>
    <string name="btn_moderately">Moderately</string>
    <string name="btn_few">Few or no information</string>
    <string name="btn_social">Social</string>
    <string name="txt_well">How well do you know REN?</string>
    <string name="txt_invite">We invite you to learn more about REN. Check our latest video.</string>
    <string name="txt_last_question">We have one last question for you. Select 3 areas that interests you most.</string>
    <string name="txt_glossary">A glossary of financial terms will help you while browsing REN\'s APP .</string>

    //Slider with multiple choices
    <string name="txt_social">Social</string>
    <string name="txt_environment">Environment</string>
    <string name="txt_renewable">Renewable</string>
    <string name="txt_market_information">Market \n Information</string>
    <string name="txt_financial_information">Financial \n Information</string>
    <string name="txt_governance">Governance</string>
    <string name="txt_infrastructure">Infrastructure</string>
    <string name="txt_stakeholder">Stakeholder</string>
    <string name="txt_quality_service">Quality of\n Service</string>
    <string name="no_name">You must enter a name…</string>


    //Profile
    <string name="profile_big_title"><font fgcolor='#2ad69e'><b><u>Sustainability</u></b></font> and social affairs guide your preferences.</string>
    <string name="profile_small_title">We know that your time is limited, so we prepared some content based on your interests.</string>






</resources>
