<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/block03_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ctb_block03_logo"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/ren_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user_ren" />

        <TextView
            android:id="@+id/txt_block03"
            android:layout_width="263dp"
            android:layout_height="96dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="21dp"
            android:fontFamily="@font/pfd_intextpro_regular"
            android:text="@string/txt_rating"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toEndOf="@+id/ctb_block03_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_elementary"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="47dp"
            android:background="@drawable/ic_chatbot_rate_rounded"
            android:fontFamily="@font/pfd_intextpro_medium"
            android:paddingStart="29dp"
            android:paddingTop="23dp"
            android:paddingEnd="101dp"
            android:paddingBottom="17dp"
            android:text="@string/btn_elementary"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_intermediate" />

        <Button
            android:id="@+id/btn_intermediate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="47dp"
            android:background="@drawable/ic_chatbot_rate_rounded"
            android:fontFamily="@font/pfd_intextpro_medium"
            android:paddingStart="29dp"
            android:visibility="gone"
            android:paddingTop="23dp"
            android:paddingBottom="17dp"
            android:text="@string/btn_intermediate"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_elementary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_proficient" />

        <Button
            android:id="@+id/btn_proficient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="47dp"
            android:visibility="gone"
            android:background="@drawable/ic_chatbot_rate_rounded"
            android:fontFamily="@font/pfd_intextpro_medium"
            android:paddingStart="29dp"
            android:paddingTop="23dp"
            android:paddingEnd="101dp"
            android:paddingBottom="17dp"
            android:text="@string/btn_proficient"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_intermediate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_block03" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>