<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/block01_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ctb_block01_logo"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/ren_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user_ren" />

        <TextView
            android:id="@+id/txt_block01"
            android:layout_width="241dp"
            android:layout_height="64dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="71dp"
            android:layout_marginEnd="43dp"
            android:layout_marginBottom="33dp"
            android:fontFamily="@font/pfd_intextpro_regular"
            android:text="@string/ctb_question01"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toEndOf="@+id/ctb_block01_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etxt_block01"
            android:layout_width="255dp"
            android:layout_height="50dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="611dp"
            android:background="@drawable/ic_chatbot_rounded_edittext"
            android:ems="10"
            android:hint=" "
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_block01" />

        <ImageView
            android:id="@+id/btn_submit_block01"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="209dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/btn_chatbot1_next"
            android:src="@mipmap/chatbot1_next"
            app:layout_constraintBottom_toBottomOf="@+id/etxt_block01"
            app:layout_constraintEnd_toEndOf="@+id/etxt_block01"
            app:layout_constraintStart_toStartOf="@+id/etxt_block01"
            app:layout_constraintTop_toTopOf="@+id/etxt_block01" />


        <TextView
            android:id="@+id/txt_name"
            android:layout_width="241dp"
            android:layout_height="32dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="66dp"
            android:fontFamily="@font/pfd_intextpro_regular"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_block01" />

        <ImageView
            android:id="@+id/user_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="154dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_name"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_user_profile_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>